--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,10 +39,10 @@ jobs:
           aws-region:         ${{ secrets.AWS_REGION }}
           mask-aws-account-id: true
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.7.6
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v3
+      #   with:
+      #     terraform_version: 1.7.6
 
       - name: Terraform Init
         run: |
